# blockchain_explorer

./: Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml  docker-compose.yml
src/: main.rs  websocket.rs
src/config/: config.rs
src/controllers/: address_controller.rs  mod.rs  transaction_controller.rs
src/db/: connection.rs  mod.rs
src/mempool/: mempool.rs  mod.rs
src/models/: address.rs  mod.rs  transaction.rs
src/services/: address_service.rs  mod.rs  transaction_service.rs
src/tests/: address_tests.rs  mempool_tests.rs  mod.rs  transaction_tests.rs
src/utils/: crypto.rs  mod.rs  parser.rs
static/: styles.css
templates/: index.html
