[package]
name = "blockchain_explorer"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0" }
diesel = { version = "2.0", features = ["postgres"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tera = "1.12"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
tokio-tungstenite = "0.17"
futures-util = "0.3"
